I make delete-admin page with session, update admin page only with css and html

--- a/css/admin.css
+++ b/css/admin.css
@@ -76,6 +76,15 @@ table tr td {
     background-color: blue;
 }
 
+.success {
+    color: greenyellow;
+    font-weight: bold;
+}
+
+.error {
+    color: green;
+}
+
 
 /*Css for menue*/
 
